feature/adding-node-support: Seperated initial node logic CODE_OF_CONDUCT.md ISSUE_TEMPLATE.md LICENSE PULL_REQUEST_TEMPLATE.md README.md cli-index.js index.js lib node_modules package-lock.json package.json updated cli context to have seperate file and use node CODE_OF_CONDUCT.md ISSUE_TEMPLATE.md LICENSE PULL_REQUEST_TEMPLATE.md README.md cli-index.js index.js lib node_modules package-lock.json package.json changed index.js to allow node usage CODE_OF_CONDUCT.md ISSUE_TEMPLATE.md LICENSE PULL_REQUEST_TEMPLATE.md README.md cli-index.js index.js lib node_modules package-lock.json package.json constructor to allow changing of arguments in node usage CODE_OF_CONDUCT.md ISSUE_TEMPLATE.md LICENSE PULL_REQUEST_TEMPLATE.md README.md cli-index.js index.js lib node_modules package-lock.json package.json added a run function for node usage

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "license": "MIT",
   "preferGlobal": true,
   "bin": {
-    "add-dependencies": "index.js"
+    "add-dependencies": "cli-index.js"
   },
   "dependencies": {
     "npm-run": "^5.0.1",
