--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "homepage": "https://github.com/arfeo/npm-add-dependencies#readme",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config ./tests/jest.config.js"
   },
   "keywords": [
     "dependencies",
@@ -28,5 +28,12 @@
   "dependencies": {
     "npm-run": "^5.0.1",
     "semver": "^6.3.0"
+  },
+  "devDependencies": {
+    "blueimp-md5": "^2.16.0",
+    "mock-argv": "^1.1.7",
+    "jest": "^26.0.1",
+    "concat-stream": "^2.0.0",
+    "child_process": "^1.0.2"
   }
 }
